blender 2.8 crash on redoing 'snap to cursor' with Offset option ON #55791

Closed
opened 2018-07-06 10:52:10 +02:00 by Arye Ramaty · 12 comments
Contributor

windows 10 & Nividia GeForce GTX 1050

blender-2.80.0-git.53c63db-windows64

crush

press Shift S to snap object, chsose "selection to cursor" and than in the floating panel try cheking the "offset"

windows 10 & Nividia GeForce GTX 1050 blender-2.80.0-git.53c63db-windows64 crush press Shift S to snap object, chsose "selection to cursor" and than in the floating panel try cheking the "offset"
Author
Contributor

Added subscriber: @aryeramaty

Added subscriber: @aryeramaty

#56069 was marked as duplicate of this issue

#56069 was marked as duplicate of this issue
Bastien Montagne changed title from blender 2.8 crush to blender 2.8 crash on redoing 'snap to cursor' with Offset option ON 2018-07-24 15:55:23 +02:00
Bastien Montagne self-assigned this 2018-07-24 15:55:23 +02:00

Added subscriber: @mont29

Added subscriber: @mont29

Added subscribers: @Spore, @deadpin

Added subscribers: @Spore, @deadpin

Depsgraph from given operator’s context is not yet fully rebuilt (its scene_cow is NULL) when the operator is re-run… still trying to understand this deeper.

Depsgraph from given operator’s context is not yet fully rebuilt (its scene_cow is NULL) when the operator is re-run… still trying to understand this deeper.

Added subscriber: @antoniov

Added subscriber: @antoniov

We have a similar issue in #56180

We have a similar issue in #56180

Added subscribers: @Sergey, @ideasman42

Added subscribers: @Sergey, @ideasman42

Proposed fix is to force rebuild/refresh of depsgraph after undo step, and before redoing the operator, in ED_undo_operator_repeat(), see P759. @Sergey, @ideasman42, does this looks OK to you?

Proposed fix is to force rebuild/refresh of depsgraph after undo step, and before redoing the operator, in `ED_undo_operator_repeat()`, see [P759](https://archive.blender.org/developer/P759.txt). @Sergey, @ideasman42, does this looks OK to you?

Updated P759 after talking with @ßergey and @ideasman42

Updated [P759](https://archive.blender.org/developer/P759.txt) after talking with @ßergey and @ideasman42

This issue was referenced by 56fd63e1ad

This issue was referenced by 56fd63e1ad4f8e8e9ce66220127ecbf80b6e39e1

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#55791
No description provided.