Fix T55791: blender 2.8 crash on redoing 'snap to cursor' with Offset option ON.

Many snap_to operators need a fully evaluated depsgraph to run
properly...